--- a/style.css
+++ b/style.css
@@ -19,19 +19,20 @@ body{
 	top:300px;
 	z-index:9999;
 	width:50px;
-	height:150px;
+	height:205px;
 	background-color:#ff0000;
 }
 
 .social i{
-	font-size:25px;
-	margin-left:5px;
+	font-size:35px;
+	margin:8px;
 	color:#ffffff;
+
 }
 
 .container{ 
 	width:960px;
-	min-height:1500px;
+	min-height:1200px;
 	margin:auto auto;
 	background-color:#fff;
 	border-radius:30px 0px 30px 0px;
@@ -100,3 +101,47 @@ body{
 	border-bottom:3px groove #ccddcc;
 	border-right:3px groove #ccddcc;
 }
+
+.bannermenufix{
+	position:fixed;
+	z-index: 9999;
+}
+.scrollable{
+	position:relative;
+	top:205px;
+	z-index: 9998;
+}
+
+.menu{
+	background-color: #000000;
+}
+
+.menu ul{
+	list-style-type: none;
+	float:right;
+	margin-top:10px;
+}
+
+.menu ul li{
+	display:inline;
+	color:#ffffff;
+	margin-right:20px;
+}
+
+@media(max-width:768px)
+{
+	.container{
+		width:750px;
+	}
+}
+
+@media(max-width:480px)
+{
+	.container{
+		width:450px;
+	}
+}
+
+
+
+
